// ================== Tabela MUSEU ==================
Table MUSEU {
  ID_museu int [pk, increment]
  nome_museu varchar(50) [not null]
}

// ================== Tabela AUTORES ==================
Table AUTORES {
  ID_autor int [pk, increment]
  sobrenome_autor varchar(50) [default: null]
  nome_autor varchar(50) [not null]
  pais varchar(50) [not null]
  data_nasc date [not null]
  data_fale date [default: null]
  ID_museu int [ref: > MUSEU.ID_museu]
}

// ================== Tabela OBJETO_ARTE ==================
Table OBJETO_ARTE {
  ID_arte int [pk]
  titulo varchar(50) [not null]
  data_criacao date [not null]
  permanente enum('S','N') [not null]
  custo decimal(10,2) [default: null]
  ID_museu int [ref: > MUSEU.ID_museu]
  ID_tecnica int [ref: > TECNICA.cod]
  ID_mov int [ref: > MOVIMENTO.cod]
  ID_autor int [ref: > AUTORES.ID_autor]
}

// ================== Tabela TECNICA ==================
Table TECNICA {
  cod int [pk]
  nome varchar(50) [not null]
}

// ================== Tabela MOVIMENTO ==================
Table MOVIMENTO {
  cod int [pk]
  nome varchar(50) [not null]
}

// ================== Tabela ESCULTURA ==================
Table ESCULTURA {
  altura decimal(5,2) [not null]
  peso decimal(5,2) [not null]
  ID_objeto int [ref: > OBJETO_ARTE.ID_arte]
}

// ================== Tabela PINTURA ==================
Table PINTURA {
  comprimento decimal(5,2) [not null]
  largura decimal(5,2) [not null]
  ID_objeto int [ref: > OBJETO_ARTE.ID_arte]
}

// ================== Tabela GENERICO ==================
Table GENERICO {
  descricao varchar(100) [not null]
  ID_objeto int [ref: > OBJETO_ARTE.ID_arte]
}

// ================== Tabela EXPOSICAO ==================
Table EXPOSICAO {
  ID_expo int [pk]
  data_inicio date [not null]
  data_fim date [default: null]
  nome_expo varchar(50) [not null]
  ID_museu int [ref: > MUSEU.ID_museu]
}

// ================== Tabela ARTES_EXPO ==================
Table ARTES_EXPO {
  ID_objeto int [ref: > OBJETO_ARTE.ID_arte]
  nome_obra varchar(50) [not null]
  ID_expo int [ref: > EXPOSICAO.ID_expo]
}

// ================== Tabela CONTRATO ==================
Table CONTRATO {
  num int [pk, not null]
  data date [not null]
}

// ================== Tabela EMPRESTIMO ==================
Table EMPRESTIMO {
  data_para_devolucao date [not null]
  data_devolucao date [default: null]
  ID_objeto int [ref: > OBJETO_ARTE.ID_arte]
  NUM_contrato int [ref: > CONTRATO.num]
}
